objects/Legal_Notice_Directory__c/Legal_Notice_Directory__c.object-meta.xml
<CustomObject>
    <description>SS-10895 - Created to store new agreement listings contacts including fields in order to store contact information pertaining to how Agreements are to be sent or how notifications are to be sent.</description>
    <label>Legal Notice Directory</label>
    <nameField>
        <displayFormat>LN-{0000}</displayFormat>
        <label>Legal Notice ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legal Notice Directories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>