objects/Legal_Notice_Directory__c/fields/Account_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Account_ID_18__c</fullName>
    <formula>Agreement_Name__r.Apttus__Account__r.X18ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account ID 18</label>
    <type>Text</type>
</CustomField>