objects/Legal_Notice_Directory__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Address</label>
    <length>150</length>
    <type>Text</type>
</CustomField>