objects/Legal_Notice_Directory__c/fields/Agreement_Name__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Agreement Name</label>
    <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
    <relationshipLabel>Legal Notice Directories</relationshipLabel>
    <relationshipName>Legal_Notice_Directories</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>