objects/Legal_Notice_Directory__c/fields/Contact_Name_LN__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name_LN__c</fullName>
    <label>Contact Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>