objects/Legal_Notice_Directory__c/fields/Team_Comments__c.field-meta.xml
<CustomField>
    <fullName>Team_Comments__c</fullName>
    <label>Team Comments</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>