objects/Legal_Notice_Directory__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Security Breach</fullName>
            </value>
            <value>
                <fullName>Data Privacy Breach</fullName>
            </value>
            <value>
                <fullName>Subprocessor Change</fullName>
            </value>
            <value>
                <fullName>General Notices</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>